Fixes navbar-collapse behaviour on small screens

--- a/css/general.css
+++ b/css/general.css
@@ -30,9 +30,10 @@ body > .container {
 code {
     font-size: 80%;
 }
-.nav {
-    height: 75px;
+.navbar-fixed-top {
+    min-height: 100px;
 }
+
 .navbar-default {
     background-color: #004592;
     border-color: #003E83;
@@ -50,4 +51,9 @@ code {
 .navbar-brand {
     padding-top: 0px;
     margin-top: -8px;
+}
+
+.navbar-default .navbar-nav > .active > a {
+    color: lightgray;
+    background-color: transparent;
 }
